vscode settings.json update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,7 @@
 		"editor.wordWrapColumn": 130
 	},
 	"files.eol": "\n",
-	"files.insertFinalNewline": true
+	"files.insertFinalNewline": true,
+	"editor.tabSize": 4,
+	"editor.insertSpaces": false
 }
